fix spot, local, stock, tranfer

--- a/adminapp/templates/admin_base.html
+++ b/adminapp/templates/admin_base.html
@@ -598,7 +598,7 @@
                     <a data-bs-toggle="collapse" href="#store-transaction">
                       <span class="sub-item">
                         <i class="fa-solid fa-tent-arrow-left-right"></i>
-                        Store Transcation
+                        Stock Transcation
                         <span class="caret"></span>
                       </span>
                     </a>
@@ -798,6 +798,14 @@
                       <span class="sub-item">
                         <i class="fa-solid fa-snowflake"></i>
                         Freezing Report
+                      </span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="{%url 'adminapp:list'%}">
+                      <span class="sub-item">
+                        <i class="fa-solid fa-snowflake"></i>
+                        Stock Report
                       </span>
                     </a>
                   </li>
