--- a/adminapp/templates/adminapp/report/freezing_report.html
+++ b/adminapp/templates/adminapp/report/freezing_report.html
@@ -1,8 +1,12 @@
-{% extends 'admin_base.html' %}
-{% block title %} Enhanced Sectioned Freezing Report {% endblock %}
-{% block content %}
-    
-    <!-- Load required libraries from CDN -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+        <!-- Load required libraries from CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     
@@ -1402,5 +1406,5 @@ window.addEventListener('afterprint', function() {
     });
 });
 </script>
-
-{%endblock%}
+</body>
+</html>
