--- a/adminapp/templates/adminapp/list/itemcategory_list.html
+++ b/adminapp/templates/adminapp/list/itemcategory_list.html
@@ -15,13 +15,13 @@
                   <i class="icon-arrow-right"></i>
                 </li>
                 <li class="nav-item">
-                  <a href="{%url 'adminapp:item_category_list'%}">Item Categories</a>
+                  <a href="{%url 'adminapp:item_category_list'%}">Item Group</a>
                 </li>
                 <li class="separator">
                   <i class="icon-arrow-right"></i>
                 </li>
                 <li class="nav-item">
-                  <a href="{%url 'adminapp:item_category_create'%}">Create Category</a>
+                  <a href="{%url 'adminapp:item_category_create'%}">Create Group</a>
                 </li>
               </ul>
             </div>
@@ -35,7 +35,7 @@
               <i class="fas fa-tags"></i>
             </div>
             <div>
-              <h3 class="card-title mb-0 fw-bold">Item Categories</h3>
+              <h3 class="card-title mb-0 fw-bold">Item Group</h3>
               <p class="text-muted mb-0 fs-6">Manage your product categories and classifications</p>
             </div>
           </div>
